--- a/src/Orbital7.MyGames/Orbital7.MyGames.csproj
+++ b/src/Orbital7.MyGames/Orbital7.MyGames.csproj
@@ -8,13 +8,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="RevStackCore-ImageSharp" Version="0.9.0" />
     <PackageReference Include="System.ComponentModel.Annotations" Version="4.4.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <Reference Include="ImageSharp">
-      <HintPath>..\Lib\netstandard1.1\ImageSharp.dll</HintPath>
-    </Reference>
     <Reference Include="Orbital7.Extensions">
       <HintPath>..\..\..\orbital7.extensions\bin\debug\netstandard2.0\Orbital7.Extensions.dll</HintPath>
     </Reference>
